--- a/app/views/lessons/_show.html.erb
+++ b/app/views/lessons/_show.html.erb
@@ -1,30 +1,31 @@
  <div class="modal-content">
-    <div class="modal-header">
+  <div class="modal-header">
     <h5 class="modal-title" id="exampleModalLabel"><%= lesson.coach.sport.name.capitalize %> Lesson </h5>
     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-        <span aria-hidden="true">&times;</span>
+      <span aria-hidden="true">&times;</span>
     </button>
-    </div>
-    <div class="modal-body">
-        <p><strong>Date/Time:</strong> <%= lesson.start_date_time.strftime("%-d %b %Y") %> | <%= lesson.start_date_time.strftime("%I:%M%p") %> - <%= lesson.end_date_time.strftime("%I:%M%p") %> </p>
-        <p><strong>Duration:</strong> <%= ((lesson.end_date_time - lesson.start_date_time)/60).round() %> mins </p>
-        <% if current_page?(coach_lessons_path)%>
-        <p><strong>Student:</strong>
+  </div>
+  <div class="modal-body">
+    <p><strong>Date/Time:</strong> <%= lesson.start_date_time.strftime("%-d %b %Y") %> | <%= lesson.start_date_time.strftime("%I:%M%p") %> - <%= lesson.end_date_time.strftime("%I:%M%p") %> </p>
+    <p><strong>Duration:</strong> <%= ((lesson.end_date_time - lesson.start_date_time)/60).round() %> mins </p>
+    <% if current_page?(coach_lessons_path)%>
+      <p><strong>Student:</strong>
         <% if lesson.student %>
-            <%= lesson.student.name %>
+          <%= lesson.student.name %>
         <% else %>
-            No student
+          No student
         <% end %>
-        </p>
-        <% else %>
-        <p><strong>Coach:</strong>
-            <%= link_to User.find(lesson.coach_id).name, coach_path(User.find(lesson.coach_id))  %>
-        <% end %>
-        <p><strong>Price:</strong> $<%= lesson.price %>/hr</p>
-        <p><strong>Description:</strong> <%= lesson.description %></p>
-        <div id="map"
-            style="width: 100%; height: 300px;"
-            data-markers="<%= {lng: lesson.location.long, lat: lesson.location.lat}.to_json %>"
-            data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+      </p>
+    <% else %>
+      <p><strong>Coach:</strong>
+        <%= link_to User.find(lesson.coach_id).name, coach_path(User.find(lesson.coach_id))  %>
+      </p>
+    <% end %>
+    <p><strong>Price:</strong> $<%= lesson.price %>/hr</p>
+    <p><strong>Description:</strong> <%= lesson.description %></p>
+    <div class="col map-sm mx-2" id="map"
+         data-markers="<%= [{lng: lesson.location.long, lat: lesson.location.lat}].to_json %>"
+         data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
     </div>
+  </div>
 </div>
