edited lesson card. edited lesson list in coach and location views to standardise with rest. added a scroll to carousel btn

--- a/app/views/lessons/_location_lesson_list.html.erb
+++ b/app/views/lessons/_location_lesson_list.html.erb
@@ -5,14 +5,13 @@
     <div class='accounts-date-card'> <%= lesson.start_date_time.strftime("%d %b %Y") %></div>
     <div class="lesson-card">
       <div class="lesson-date">
-        <span class="lesson-date date"><%= lesson.start_date_time.strftime("%-d %b %Y") %></span>
         <span class="lesson-date time"><%= lesson.start_date_time.strftime("%-d.%I%p") %></span>
         <span class="lesson-date duration"><%= ((lesson.end_date_time - lesson.start_date_time)/60).round() %> mins</span>
       </div>
 
       <div class="lesson-details">
         <strong><%= lesson.coach.sport.name.capitalize %> Class <i class="material-icons mr-1"><%= sport_icon(lesson.coach.sport.name) %></i></strong>
-        <span>Coach: <%= User.find(lesson.coach_id).name %></span>
+        <span>Coach: <%= link_to User.find(lesson.coach_id).name, coach_path(User.find(lesson.coach_id))  %></span>
         <span>Location: <%= lesson.location.name %></span>
       </div>
 
