--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -3,5 +3,8 @@
     <%= render 'shared/navbar' %>
   </div>
   <%= render 'banner' %>
+  <div id="homeScrollBtn">
+      <i class="fas fa-angle-double-down"></i>
+  </div>
 </div>
 <%= render 'carousel' %>
