--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -183,6 +183,36 @@
   }
 }
 
+#homeScrollBtn {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  margin-left: auto;
+  margin-right: auto;
+  font-size: 2rem;
+  height: 3rem;
+  width: 3rem;
+  border-radius: 50%;
+  cursor: pointer;
+  color: var(--primary-color);
+  // background-color: var(--background-color-light);
+  z-index: 99;
+  transition: .4s ease;
+  animation: bounce 2s ease infinite;
+
+  .fas.fa-angle-double-down {
+    text-align: center;
+    width: 100%;
+  }
+}
+
+@keyframes bounce {
+	0%, 20%, 50%, 80%, 100% {transform: translateY(0);}
+	40% {transform: translateY(-30px);}
+	60% {transform: translateY(-15px);}
+}
+
 @media (max-width: $breakpoint-width-medium) {
   #scrollToTopBtmBtn {
     height: 2.5rem;
