--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -84,7 +84,7 @@
             <i class="far fa-bell"></i> <span data-notification-target="unreadCount"></span>
           </a>
            <a class="dropdown-toggle mobile-profile" href="#" role="button" id="dropdownNotifications" data-notification-target="notificationButton" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-              <span data-notification-target="unreadCount">Notifications</span>
+              <span>Notifications</span><span data-notification-target="unreadCount"></span>
           </a>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown" id="dropdownNotificationDetails" data-notification-target="notificationDetails">
             <span class="dropdown-item"></span>
