changed seeds file to add golf and kickboxing. removed 'coach1, coach2.. etc too'

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -9,16 +9,15 @@
         <li>Date/Time: <%= @order.lesson.start_date_time %></li>
         <li>Location: <%= @order.lesson.location.name %></li>
         <li>TOTAL <%= humanized_money_with_symbol @order.amount %></li>
-        </li>
       </ul>
-      <%# <div class="col-md-3"><%= image_tag 'https://www.cs.csubak.edu/~rayala/2680_F19/proj1/images/location.jpg', width: '100%' %>
       <div id="map"
                    style="width: 100%; height: 300px;"
                    data-markers="<%= [{lng: @order.lesson.location.long, lat: @order.lesson.location.lat}].to_json %>"
-                   data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"></div>
+                   data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>">
+      </div>
       <br>
       <%= link_to 'My Lessons', lessons_path, class: 'btn btn-flat' %>
-  </div>
+
     </div>
   </div>
 </div>
