--- a/app/assets/stylesheets/pages/_coach-profile.scss
+++ b/app/assets/stylesheets/pages/_coach-profile.scss
@@ -27,16 +27,8 @@
   top: -40px;
 }
 
-.chat-btn {
-  position: relative;
-  right: 380px;
-  top: 50px;
-}
-
 .favorite-tag {
-  position: relative;
-  right: 10px;
-  top: 40px;
+  margin-top: 20px;
 }
 
 .user-action {
