--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -233,7 +233,8 @@
     width: 2rem;
     font-size: 1.4rem;
   }
-  .btn-flat {
-    padding: 0.5rem 1rem;
+  .btn {
+    padding: 0.25rem 0.5rem;
+    font-size: 80%;
   }
 }
