--- a/app/views/chats/_chat.html.erb
+++ b/app/views/chats/_chat.html.erb
@@ -19,6 +19,6 @@
   </div>
 </div>
 
-<%= simple_form_for @message, url: coach_chat_messages_path(@coach, @chat), remote: true do |f| %>
+<%= simple_form_for @message, url: coach_chat_messages_path(@coach, @chat), remote: true, html: { autocomplete: "off" } do |f| %>
   <%= f.input :content, label: false, placeholder: "Type your message here" %>
 <% end %>
