--- a/app/views/lessons/_location_lesson_list.html.erb
+++ b/app/views/lessons/_location_lesson_list.html.erb
@@ -11,7 +11,7 @@
 
       <div class="lesson-details">
         <strong><%= lesson.coach.sport.name.capitalize %> Class <i class="material-icons mr-1"><%= sport_icon(lesson.coach.sport.name) %></i></strong>
-        <span>Coach: <%= link_to User.find(lesson.coach_id).name, user_path(lesson.coach_id) %></span>
+        <span>Coach: <%= link_to User.find(lesson.coach_id).name, coach_path(User.find(lesson.coach_id)), class:"coach-link" %></span>
         <span>Location: <%= lesson.location.name %></span>
       </div>
 
@@ -19,7 +19,7 @@
         <p>Price: <%= humanized_money_with_symbol(lesson.price) %></p>
       </div>
 
-      <div>
+      <div class="user-actions">
         <%# <%= link_to "Book Lesson", make_booking_lesson_path(lesson), class:'btn-flat' %>
         <%= form_tag orders_path do %>
           <%= hidden_field_tag 'lesson_id', lesson.id %>
