--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -237,7 +237,7 @@
   .btn {
     padding: 0.25rem 0.5rem;
     font-size: 80%;
-
+  }
   .btn-flat {
     padding: 0.5rem 1rem;
     font-size: .8rem;
