--- a/app/views/lessons/_list.html.erb
+++ b/app/views/lessons/_list.html.erb
@@ -1,6 +1,6 @@
 <div class="container" data-controller='lesson' data-lesson-target='list'>
   <div class='lesson-header'>
-  <h1>My Lessons</h1>
+  <h1 class='header'>My Lessons</h1>
   </div>
 
   <div class='lesson-header-links'>
