--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,7 @@
 <div class="banner">
   <div class='landing-navbar'>
     <%= render 'shared/navbar' %>
+    <%= render 'shared/modeswitch' %>
   </div>
   <%= render 'banner' %>
   <div id="homeScrollBtn">
