--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,4 +1,4 @@
-<div class="navbar navbar-expand-sm navbar-dark">
+<div class="navbar navbar-expand-sm navbar-dark <%= "navbar-home " if current_page?(root_path) %>">
   <div class='navbar-logo'>
     <%= link_to root_path do %>
       <%= image_tag "https://res.cloudinary.com/dcwfy3dua/image/upload/v1640006761/sportmelite/Sportme_3_n4b85j.png" %>
