fixed a bug with date input

--- a/app/views/coach/lessons/_calendar.html.erb
+++ b/app/views/coach/lessons/_calendar.html.erb
@@ -1,6 +1,6 @@
 <div id='calendar' data-events="<%= @lessons_json %>" data-google-events="<%= @google_events %>"><div class="spinner hide"></div></div>
 <div class="collapse" id="selectDate" class='m2'>
   <form>
-    <input id='selectDateInput' type='date'>
+    <input id='selectDateInput' type='date' required>
   </form>
 </div>
