edited seeded images for golf coaches

--- a/app/views/coaches/show.html.erb
+++ b/app/views/coaches/show.html.erb
@@ -46,11 +46,11 @@
         <h3>Competitions</h3>
           <ul>
             <li>LPGA T&CP Sectional Tournament (2010)</li>
-            <li>Women’s Metropolitan Golf Open Championships (2010)</li>
-            <li>Maryland State Women’s Open (2010)</li>
-            <li>US Women’s Open Qualifier (2010)</li>
-            <li>US Women’s Open Sectional Qualifying (2011)</li>
-            <li>CN Canadian Women’s Tour (2011)</li>
+            <li>Men’s Metropolitan Golf Open Championships (2010)</li>
+            <li>Maryland State Men’s Open (2010)</li>
+            <li>US Men’s Open Qualifier (2010)</li>
+            <li>US Men’s Open Sectional Qualifying (2011)</li>
+            <li>CN Canadian Men’s Tour (2011)</li>
           </ul>
       </div>
       <div class='coach-competitions'>
