--- a/app/assets/stylesheets/components/_coach-card.scss
+++ b/app/assets/stylesheets/components/_coach-card.scss
@@ -1,4 +1,4 @@
-.coach-card-category {
+.coach-banner {
   background-size: cover;
   background-position: center;
   height: 180px;
@@ -6,75 +6,89 @@
   justify-content: center;
   align-items: center;
   color: white;
-  font-size: 24px;
+  font-size: 4vw;
   font-weight: bold;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
 
-.coach-cards-container {
-  display: flex;
-}
-
 .coach-cards {
-  flex-grow: 1;
-  display: grid;
-  grid-template-columns: 1fr 1fr 1fr;
-  grid-gap: 16px;
-  padding: 24px 0;
+  // flex-grow: 1;
+  // display: grid;
+  // grid-template-columns: 1fr 1fr 1fr;
+  // grid-gap: 16px;
+  // padding: 0px 0;
 }
 .coach-card {
-  overflow: hidden;
-  height: 160px;
-  background: white;
-  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  // overflow: hidden;
   display: flex;
-  align-items: center;
+  height: 150px;
+  padding: 10px;
   border-radius: 5px;
-  transition: ease 0.3s;
-  color: black;
+  box-shadow: 0px 0px 5px var(--background-color-hover);
+  //
+  // box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  // align-items: center;
+  // transition: ease 0.3s;
+  color: var(--text-color);
 
-  a {
-    text-decoration: none;
-    color: white;
+  p {
+    margin: 0;
+    padding: auto;
   }
 
   &:hover {
-    transform: translateY(5px);
+    transform: translateY(-5px);
+    border: 2px solid var(--primary-color);
+    color: var(--text-color);
   }
 }
 
-.coach-card img {
+.coach-image {
+  height: 100%;
+}
+
+.coach-image img {
   height: 100%;
   width: 120px;
   object-fit: cover;
+  object-position: top;
 }
 
-.coach-card h2 {
-  font-size: 16px;
-  font-weight: bold;
-  margin: 0;
-}
+// .coach-card h2 {
+//   font-size: 16px;
+//   font-weight: bold;
+//   margin: 0;
+// }
 
 .coach-card p {
-  font-size: 12px;
-  line-height: 1.4;
-  opacity: .7;
-  margin-bottom: 0;
-  margin-top: 8px;
+  font-size: 14px;
 }
 
 .coach-card-infos {
-  padding: 16px;
+  background: var(--background-color-light);
+  // background: white;
+  width: 100%;
+  padding: 5px;
+  overflow: hidden;
 }
 
 @media (max-width: $breakpoint-width-bootstrap-sm) {
+
   .coach-cards {
     grid-template-columns: 1fr;
+    width: 80%;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .coach-card {
+    margin-left: 10px;
+    margin-right: 10px;
   }
 
   .coach-card-infos {
-    width: 232px;
+    // width: 232px;
   }
 }
