--- a/app/views/coaches/_coachfilterform.html.erb
+++ b/app/views/coaches/_coachfilterform.html.erb
@@ -1,26 +1,33 @@
-<%= form_for_filterrific @filterrific do |f| %>
-  <div class='d-flex my-2'>
-    <label>Gender:</label>
-    <%= f.select(
-      :with_gender,
-      @filterrific.select_options[:with_gender],
-      { include_blank: '- Any -' }, class:'form-control filter-input'
-    ) %>
-  </div>
+<%= form_for_filterrific @filterrific  do |f| %>
+  <div class="row align-items-center">
+    <div class='col d-flex align-items-center'>
+      Gender:
+      <%= f.select(
+        :with_gender,
+        @filterrific.select_options[:with_gender],
+        { include_blank: '- Any -' },
+        class:'form-control filter-input m-2 text-center'
+      ) %>
+    </div>
 
-  <div class='d-flex my-2'>
-    <label>Sorted by:</label>
-    <%= f.select(:sorted_by, @filterrific.select_options[:sorted_by],{}, class:'form-control filter-input') %>
-  </div>
+    <div class='col d-flex align-items-center'>
+      Sorted by:
+      <%= f.select(
+        :sorted_by,
+        @filterrific.select_options[:sorted_by],
+        {},
+        class:'form-control filter-input m-2 text-center'
+      )%>
+    </div>
 
-  <div>
-    <%= link_to(
-      'Reset filters',
-      reset_filterrific_url,
-      class:'reset-filter'
-    ) %>
+    <div>
+      <%= link_to(
+        'Reset filters',
+        reset_filterrific_url,
+        class:'col reset-filter'
+      ) %>
+    </div>
   </div>
-  <%# add an automated spinner to your form when the list is refreshed %>
-  <%# <%= render_filterrific_spinner %>
-  <% end %>
-
+<%# add an automated spinner to your form when the list is refreshed %>
+<%# <%= render_filterrific_spinner %>
+<% end %>
