--- a/app/views/coaches/_lessonfilterform.html.erb
+++ b/app/views/coaches/_lessonfilterform.html.erb
@@ -1,22 +1,24 @@
 <%= form_for_filterrific @filterrific do |f| %>
-  <div class='d-flex'>
-    Location:
-    <%= f.select(
-      :with_location_name,
-      @filterrific.select_options[:with_location_name],
-      { include_blank: '- Any -' },
-      class:'form-control filter-input'
-    ) %>
-  </div>
+  <div class="row align-items-center">
+    <div class='col d-flex align-items-center'>
+      Location:
+      <%= f.select(
+        :with_location_name,
+        @filterrific.select_options[:with_location_name],
+        { include_blank: '- Any -' },
+        class:'form-control filter-input text-center'
+      ) %>
+    </div>
 
-  <div class='d-flex'>
-    Sorted by:
-    <%= f.select(:sorted_by, @filterrific.select_options[:sorted_by], {}, class:'form-control filter-input')  %>
-  </div>
+    <div class='col d-flex align-items-center'>
+      Sorted by:
+      <%= f.select(:sorted_by, @filterrific.select_options[:sorted_by], {}, class:'form-control filter-input text-center')  %>
+    </div>
 
-  <div>
-    <%= link_to 'Reset filters', reset_filterrific_url, :class => "reset-filter" %>
+    <div>
+      <%= link_to 'Reset filters', reset_filterrific_url, :class => "col reset-filter" %>
+    </div>
+    <%# add an automated spinner to your form when the list is refreshed %>
+    <%# <%= render_filterrific_spinner %>
   </div>
-  <%# add an automated spinner to your form when the list is refreshed %>
-  <%# <%= render_filterrific_spinner %>
-  <% end %>
+<% end %>
