--- a/app/views/coaches/index.html.erb
+++ b/app/views/coaches/index.html.erb
@@ -4,7 +4,7 @@
 
 <div class='container'>
 
-  <div class="coach-card-category" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= @sport.picture_url %>)">
+  <div class="coach-banner" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.3)), url(<%= @sport.picture_url %>)">
     <h1><strong><%= @sport.name.capitalize %> Coaches</strong></h1>
   </div>
 
