--- a/app/views/locations/_info_window.html.erb
+++ b/app/views/locations/_info_window.html.erb
@@ -1,6 +1,6 @@
 <div class="location-info" id="location-<%= location.id %>" style='color: black'>
-  <h3><%= location.name %></h3>
-  <div class="d-flex">
+  <h6><strong><%= location.name %></strong></h6>
+  <div class="d-flex mb-2">
     <% location.coaches.map(&:sport).uniq.each do |sport| %>
       <i class="material-icons mr-1",
               id="sport-<%= sport.id %>">
