--- a/app/assets/stylesheets/components/_coach-card.scss
+++ b/app/assets/stylesheets/components/_coach-card.scss
@@ -8,30 +8,24 @@
   color: white;
   font-size: 4vw;
   font-weight: bold;
-  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+  text-shadow: 1px 1px 3px var(--text-color);
   border-radius: 5px;
   box-shadow: 0 0 15px rgba(0,0,0,0.2);
 }
 
 .coach-cards {
-  // flex-grow: 1;
-  // display: grid;
-  // grid-template-columns: 1fr 1fr 1fr;
-  // grid-gap: 16px;
-  // padding: 0px 0;
+  align-items: center;
 }
+
 .coach-card {
   // overflow: hidden;
   display: flex;
   height: 150px;
   padding: 10px;
   border-radius: 5px;
-  box-shadow: 0px 0px 5px var(--background-color-hover);
-  //
-  // box-shadow: 0 0 15px rgba(0,0,0,0.2);
-  // align-items: center;
-  // transition: ease 0.3s;
+  box-shadow: 0px 0px 5px rgba(136, 135, 135, 0.3);
   color: var(--text-color);
+  margin: 1;
 
   p {
     margin: 0;
@@ -56,19 +50,12 @@
   object-position: top;
 }
 
-// .coach-card h2 {
-//   font-size: 16px;
-//   font-weight: bold;
-//   margin: 0;
-// }
-
 .coach-card p {
   font-size: 14px;
 }
 
 .coach-card-infos {
   background: var(--background-color-light);
-  // background: white;
   width: 100%;
   padding: 5px;
   overflow: hidden;
@@ -78,17 +65,10 @@
 
   .coach-cards {
     grid-template-columns: 1fr;
-    width: 80%;
-    align-items: center;
-    justify-content: center;
   }
 
   .coach-card {
     margin-left: 10px;
     margin-right: 10px;
-  }
-
-  .coach-card-infos {
-    // width: 232px;
   }
 }
