--- a/app/assets/stylesheets/pages/_lessons.scss
+++ b/app/assets/stylesheets/pages/_lessons.scss
@@ -174,7 +174,7 @@
 }
 
 .reset-filter {
-  color: var(--primary-color);
+  color: var(--text-color);
 }
 
 @media (max-width: $breakpoint-width-bootstrap-sm) {
