fixed minor bugs

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -242,9 +242,9 @@
   }
 
   .custom-switch {
-    // position: absolute;
-    // top: 4rem;
-    // right: 0;
+    position: absolute;
+    top: 4rem;
+    right: 0;
   }
 
   .mobile-profile {
