updated CSS for filters

--- a/app/assets/stylesheets/components/_carousel.scss
+++ b/app/assets/stylesheets/components/_carousel.scss
@@ -17,6 +17,9 @@
 //   color: $primary-color;
 // }
 
+.carousel {
+  display: flex;
+}
 
 .carousel-indicators {
   bottom: -2.4375rem;
@@ -51,9 +54,9 @@
 }
 
 @media (max-width: $breakpoint-width-bootstrap-sm) {
-  #myCarousel {
-    display: none;
-  }
+  // #myCarousel {
+  //   display: none;
+  // }
 
   .carousel-control-prev {
     display: none;
@@ -63,21 +66,26 @@
     display: none;
   }
 
-  .mobile.sport-list {
-    display: block;
+  .coach-carousel-indicators {
+    display: none;
+
   }
 
-  .sport-card {
-    margin: 10px 15px;
-  }
+  // .mobile.sport-list {
+  //   display: block;
+  // }
+
+  // .sport-card {
+  //   margin: 10px 15px;
+  // }
 }
 .coach-carousel-inner {
-  padding: 60px 40px;
-  margin-bottom: 30px;
+  // padding: 60px 40px;
+  // margin-bottom: 15px;
 }
 
 .coach-carousel-indicators {
-  bottom: -150px;
+  // bottom: -150px;
   padding-bottom: 5px;
 
 }
