--- a/app/assets/stylesheets/components/_map.scss
+++ b/app/assets/stylesheets/components/_map.scss
@@ -58,12 +58,18 @@
 
 // Small devices (landscape phones, less than 768px)
 @media (max-width: 767.98px) {
-
+  .map-lg {
+    width: 100%;
+    height: 45vh;
+  }
 }
 
 // Medium devices (tablets, less than 992px)
 @media (max-width: 991.98px) {
-
+  .map-lg {
+    width: 100%;
+    height: 60vh;
+  }
 }
 
 // Large devices (desktops, less than 1200px)
