--- a/app/views/coaches/_lessonfilterform.html.erb
+++ b/app/views/coaches/_lessonfilterform.html.erb
@@ -1,6 +1,6 @@
 <%= form_for_filterrific @filterrific do |f| %>
-  <div class="row align-items-center">
-    <div class='col d-flex align-items-center'>
+  <div class="filter-options">
+    <div class='filter-option'>
       Location:
       <%= f.select(
         :with_location_name,
@@ -10,13 +10,13 @@
       ) %>
     </div>
 
-    <div class='col d-flex align-items-center'>
+    <div class='filter-option'>
       Sorted by:
       <%= f.select(:sorted_by, @filterrific.select_options[:sorted_by], {}, class:'form-control filter-input text-center')  %>
     </div>
 
     <div>
-      <%= link_to 'Reset filters', reset_filterrific_url, :class => "col reset-filter" %>
+      <%= link_to 'Reset filters', reset_filterrific_url, :class => "filter-option reset-filter" %>
     </div>
     <%# add an automated spinner to your form when the list is refreshed %>
     <%# <%= render_filterrific_spinner %>
