--- a/app/assets/stylesheets/components/_filter-form.scss
+++ b/app/assets/stylesheets/components/_filter-form.scss
@@ -1,31 +1,8 @@
-.filter-options {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  margin-bottom: 5px;
-  justify-items: center;
-}
-
-.filter-option {
-  display: flex;
-  align-items: center;
-  margin: 0.25rem;
-}
-
 .filter-form {
-  // display: block;
+  display: flex;
   margin-top: 15px;
 }
 
-.filter-input {
-  // padding: 0 15px;
-  width: max-content;
-}
-
-@media (max-width: 767.98px) {
-  .filter-options {
-    display: block;
-    flex-direction: column;
-    align-items: left;
-  }
+.filter-element {
+  padding: 0 15px;
 }
