--- a/app/views/coaches/show.html.erb
+++ b/app/views/coaches/show.html.erb
@@ -26,20 +26,23 @@
         <h3><%= @coach.name  %></h3>
         <p><%= @coach.coach_profile.description %></p>
       </div>
+      <div class='coach-badges'>
+        <div class='coach-badge'>
+        <img src="http://www.stargolf.com.sg/wp-content/uploads/2018/06/tpi3A-768x291.png" alt="" width="150" height="50">
+        </div>
+        <div class='coach-badge'>
+        <img src="http://www.stargolf.com.sg/wp-content/uploads/2016/01/icon-lpga.png" alt="" width="150" height="100">
+        </div>
+        <div class='coach-badge'>
+        <img src="http://www.stargolf.com.sg/wp-content/uploads/2017/03/1475803339-150x150.png" alt="" width="100" height="50">
+        </div>
+      </div>
     </div>
-
+  
     <div class='dividing-line'></div>
 
-    <div class='coach-badges row'>
-      <img class='coach-badge col' src="http://www.stargolf.com.sg/wp-content/uploads/2018/06/tpi3A-768x291.png" alt="" width="150" height="50">
-      <img class='coach-badge col' src="http://www.stargolf.com.sg/wp-content/uploads/2016/01/icon-lpga.png" alt="" width="150" height="100">
-      <img class='coach-badge col' src="http://www.stargolf.com.sg/wp-content/uploads/2017/03/1475803339-150x150.png" alt="" width="100" height="50">
-    </div>
-
-    <div class='dividing-line'></div>
-
-    <div class='coach-credentials row'>
-      <div class='coach-competitions  col-sm-12 col-md-6 col-lg-6 col-xl-6'>
+    <div class='coach-credentials'>
+      <div class='coach-qualifications'>
         <h3>Competitions</h3>
           <ul>
             <li>LPGA T&CP Sectional Tournament (2010)</li>
@@ -50,7 +53,7 @@
             <li>CN Canadian Men’s Tour (2011)</li>
           </ul>
       </div>
-      <div class='coach-qualifications  col-sm-12 col-md-6 col-lg-6 col-xl-6'>
+      <div class='coach-competitions'>
         <h3>Achievements and Awards</h3>
           <ul>
             <li>MOE-IRS Registered Instructor</li>
@@ -65,11 +68,11 @@
 
     <div class='dividing-line'></div>
 
-    <div class="coach-training-images-container">
+    <div class="coach-images-container">
       <h3>Training Videos / Photos</h3>
-      <div class="coach-training-images">
+      <div class="coach-images">
         <% @coach.coach_profile.photos.each do |photo| %>
-          <%= cl_image_tag photo.key, height: 150, width: 150, crop: :fill%>
+          <%= cl_image_tag photo.key, height: 150, width: 150, crop: :fill %>
         <% end %>
       </div>
     </div>
