--- a/app/views/pages/_carousel.html.erb
+++ b/app/views/pages/_carousel.html.erb
@@ -2,7 +2,7 @@
   <h3>PICK FROM ONE OF THESE POPULAR SPORTS</h3>
 	<div class="row">
 		<div class="col-md-12 mx-auto">
-			<div id="myCarousel" class="carousel slide align-items-center" data-ride="carousel" data-interval="0">
+			<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="0">
 			<!-- Carousel indicators -->
 			<ol class="carousel-indicators">
 				<li data-target="#myCarousel" data-slide-to="0" class="active"></li>
@@ -13,7 +13,7 @@
 				<div class="carousel-item active">
 					<div class="row">
             <% Sport.first(3).each do |sport| %>
-              <div class="col-sm-12 col-md-4 col-lg-4">
+              <div class="col-sm-4">
                 <div class="border text-center sport-card" style="background-image: url(<%= url_for(sport.picture_url) %>);">
                   <%= link_to sport.name.capitalize, sport_coaches_path(sport) %>
                 </div>
@@ -24,7 +24,7 @@
 				<div class="carousel-item">
 					<div class="row">
 						<% Sport.last(3).each do |sport| %>
-              <div class="col-sm-12 col-md-4 col-lg-4">
+              <div class="col-sm-4">
                 <div class="border text-center sport-card" style="background-image: url(<%= url_for(sport.picture_url) %>);">
                   <%= link_to sport.name.capitalize, sport_coaches_path(sport) %>
                 </div>
@@ -45,7 +45,7 @@
     <div class="mobile sport-list">
       <div class="row">
         <% Sport.first(5).each do |sport| %>
-          <div class="col-sm-12 col-md-6 col-lg-4">
+          <div class="col-sm-4">
             <div class="border text-center sport-card" style="background-image: url(<%= url_for(sport.picture_url) %>);">
               <%= link_to sport.name.capitalize, sport_coaches_path(sport) %>
             </div>
