add gender to user form during registration and edit

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -12,6 +12,7 @@
                 required: true,
                 autofocus: true,
                 input_html: { autocomplete: "name" }%>
+    <%= f.select :gender, ['male', 'female'], {}, class: "form-control" %>
     <%= f.input :email,
                 required: true,
                 autofocus: true,
