--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -20,6 +20,7 @@
                   required: false,
                   autofocus: true,
                   input_html: { autocomplete: "name" }%>
+      <%= f.select :gender, ['male', 'female'], {}, class: "form-control" %>
       <%= f.input :password,
                   hint: "leave it blank if you don't want to change it",
                   required: false,
