--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -54,7 +54,7 @@
           <%= image_tag current_user.coach_profile.photo_key, class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class='dropdown-toggle mobile-profile' id='navbarDropdown' data-toggle='dropdown'aria-haspopup='true' aria-expanded= 'false' >Profile</div>
         <% else %>
-          <%= image_tag "https://kitt.lewagon.com/placeholder/users/suulightly", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
+          <%= image_tag current_user.photo.present? ? current_user.photo : "no-user.png", class: "avatar dropdown-toggle", id: "navbarDropdown", data: { toggle: "dropdown" }, 'aria-haspopup': true, 'aria-expanded': false %>
           <div class='dropdown-toggle mobile-profile' id='navbarDropdown' data-toggle='dropdown'aria-haspopup='true' aria-expanded= 'false' >Profile</div>
         <% end %>
           <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
