updating profile pic link for coach details page

--- a/app/views/coaches/show.html.erb
+++ b/app/views/coaches/show.html.erb
@@ -4,7 +4,7 @@
     </div>
     <div class='coach-profile-top'>
       <div class="profile-picture">
-          <img src=<%= @coach.coach_profile.photo_key %> class="avatar-coach" alt="">
+          <img src=<%= @coach.photo.url %> class="avatar-coach" alt="">
       </div>
       <div class="user-actions d-flex ">
         <div class="chat-btn m-2 p-2 align-items-start">
