divded navbar items into component

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
 <div class="banner">
   <div class='landing-navbar'>
-    <%= render 'shared/navbar' %>
+    <%= render 'shared/navbar/navbar' %>
     <%= render 'shared/modeswitch' %>
   </div>
   <%= render 'banner' %>
